# openai-flask

./: LICENSE  README.md  app.py  generateWebsite.py  index.html  pyproject.toml  requirements.txt  styles.css
